--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,21 +14,23 @@ atty = "0.2.11"
 cargo_metadata = "0.6.0"
 console = "0.6.1"
 dialoguer = "0.3.0"
+curl = "0.4.13"
+dirs = "1.0.4"
+env_logger = { version = "0.5.13", default-features = false }
 failure = "0.1.2"
 human-panic = "1.0.1"
 glob = "0.2"
 indicatif = "0.9.0"
 lazy_static = "1.1.0"
+log = "0.4.6"
 openssl = { version = '0.10.11', optional = true }
 parking_lot = "0.6"
 serde = "1.0.74"
 serde_derive = "1.0.74"
 serde_ignored = "0.0.4"
 serde_json = "1.0.26"
-slog = "2.3"
-slog-term = "2.4"
-slog-async = "2.3"
 strsim = "0.8.0"
+siphasher = "0.2.3"
 structopt = "0.2"
 toml = "0.4"
 which = "2.0.0"
