--- a/binary-install/Cargo.toml
+++ b/binary-install/Cargo.toml
@@ -1,6 +1,12 @@
 [package]
-name = "wasm-pack-binary-install"
-version = "0.1.0"
+name = "binary-install"
+description = "install a binary from a path to a global cache"
+authors = ["The wasm-pack team"]
+repository = "https://github.com/rustwasm/wasm-pack/tree/master/binary-install"
+license = "MIT/Apache-2.0"
+version = "0.0.1"
+documentation = "https://docs.rs/binary-install"
+readme = "./README.md"
 
 [dependencies]
 curl = "0.4.13"
