--- a/binary-install/Cargo.toml
+++ b/binary-install/Cargo.toml
@@ -14,6 +14,7 @@ dirs = "1.0.4"
 failure = "0.1.2"
 flate2 = "1.0.2"
 hex = "0.3"
+is_executable = "0.1.2"
 siphasher = "0.2.3"
 tar = "0.4.16"
 zip = "0.5.0"
