Only print `cargo test` output the once
Also introduces testing of our CLI's output via `assert_cmd`. Expect some follow
ups to get more of our testing infrastructure using this incredible crate!

Fixes #511

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,8 @@ binary-install = { version = "0.0.1", path = "./binary-install" }
 walkdir = "2"
 
 [dev-dependencies]
+assert_cmd = "0.10.2"
+predicates = "1.0.0"
 tempfile = "3"
 
 [features]
